syntax = "proto3";

package storage;

import "google/protobuf/timestamp.proto";
import "storage/process_indicator.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";

message FileActivity {
  message FileMetadata {
    uint32 uid = 1;
    uint32 gid = 2;
    uint32 mode = 3;
    string username = 4;
    string group = 5;
  }

  message File {
    string path = 1;
    string host_path = 2;
    FileMetadata meta = 3;
  }

  enum Type {
    CREATION = 0;
    UNLINK = 1;
    RENAME = 2;
    PERMISSION_CHANGE = 3;
    OWNERSHIP_CHANGE = 4;
    WRITE = 5;
    OPEN = 6;
  }

  // When the file activity happened
  google.protobuf.Timestamp timestamp = 1;

  // The process that performed the action. May contain deployment/namespace
  // information.
  ProcessIndicator process = 2;

  Type type = 3;

  File file = 4;

  // specific to `RENAME` activity, the new location / metadata of the file.
  optional File moved = 5;
}
